--- a/config/workload.yaml
+++ b/config/workload.yaml
@@ -13,6 +13,6 @@ spec:
   source:
     git:
       # update when code is pushed to a new location
-      url: $GITREPO
+      url: https://github.com/ykhadilkar/spring-sensors.git
       ref:
         branch: main
